# Old_school

./: CMakeLists.txt  astro64version.cxx  proj8A.cxx  proj8C.cxx  proj8G.cxx
FINAL_PROJECT/: astro.cxx
Proj8ColtonTrebbien/: proj8B.cxx  proj8D.cxx  proj8E.cxx  proj8F.cxx
